--- a/views/public/html/reportsAll.html
+++ b/views/public/html/reportsAll.html
@@ -102,7 +102,8 @@ document.getElementById('exportCandidatesButton').addEventListener('click', asyn
         try {
             
             const token = localStorage.getItem('token');
-            const response = await axios.get('https://nemo.ivistaz.co/candidate/reportsAll', { headers: { "Authorization": token } });
+            const userId = localStorage.getItem('userId')
+            const response = await axios.get(`https://nemo.ivistaz.co/candidate/reportsAll/${userId}`,{headers:{"Authorization":token}});
 
             if (!response.data || !response.data.candidates) {
                 throw new Error('Error fetching candidates data');
