--- a/views/public/html/search.html
+++ b/views/public/html/search.html
@@ -751,6 +751,8 @@
                   <th style="font-size: 8px;">Vessel</th>
                   <th style="font-size: 8px;">Mobile</th>
                   <th style="font-size: 8px;">DOB</th>
+                  <th style="font-size: 8px;">Email</th>
+
                   <th style="font-size: 8px;">Actions</th>
               </tr>
           </thead>
