--- a/views/public/html/add-rank.html
+++ b/views/public/html/add-rank.html
@@ -609,6 +609,12 @@
                               <input type="text" class="form-control" id="category" placeholder="Enter category" required>
                           </div>
                       </div>
+                      <div class="mb-3 row">
+                        <label for="eval_type" class="col-md-2 col-form-label">Eval Type</label>
+                        <div class="col-md-10">
+                            <input type="text" class="form-control" id="eval_type" placeholder="Enter category" required>
+                        </div>
+                    </div>
                           <div class="text-end mb-3">
                               <button type="submit" class="btn btn-primary">ADD RANK</button>
                           </div>
