--- a/views/public/html/availableCandidates.html
+++ b/views/public/html/availableCandidates.html
@@ -711,6 +711,7 @@
     <table class="table table-bordered bg-white">
         <thead>
             <tr>
+              <th>Candidate ID</th>
                 <th>Name</th>
                 <th>Rank</th>
                 <th>Available Date</th>
