--- a/views/public/html/search.html
+++ b/views/public/html/search.html
@@ -717,6 +717,14 @@
             <label for="toAge" class="form-label">To Age</label>
             <input type="text" class="form-control form-control-sm" id="toAge">
         </div>
+        <div class="col">
+          <label for="c_mobi1" class="form-label">To Age</label>
+          <input type="text" class="form-control form-control-sm" id="c_mobi1">
+      </div>
+      <div class="col">
+        <label for="email1" class="form-label">To Age</label>
+        <input type="text" class="form-control form-control-sm" id="email1">
+    </div>
         
         </div>
         <div class="row ">
