--- a/views/public/html/search.html
+++ b/views/public/html/search.html
@@ -718,11 +718,11 @@
             <input type="text" class="form-control form-control-sm" id="toAge">
         </div>
         <div class="col">
-          <label for="c_mobi1" class="form-label">To Age</label>
+          <label for="c_mobi1" class="form-label">Primary Mobile</label>
           <input type="text" class="form-control form-control-sm" id="c_mobi1">
       </div>
       <div class="col">
-        <label for="email1" class="form-label">To Age</label>
+        <label for="email1" class="form-label">Email</label>
         <input type="text" class="form-control form-control-sm" id="email1">
     </div>
         
