--- a/views/public/html/add-c-contract.html
+++ b/views/public/html/add-c-contract.html
@@ -686,7 +686,7 @@
                                             <select id="contract_vsl" class="form-select" required>
                                                 <!-- Options will be dynamically added using JavaScript -->
                                             </select>
-                                            <label for="contract_vsl" class="form-label">Select Vessel Type</label>
+                                            <label for="contract_vsl" class="form-label">Select Vessel</label>
                                         </div>
                                     </div>
                                     <div class="col-md-6">
@@ -694,7 +694,7 @@
                                             <select id="candidate_c_vessel" class="form-select" required>
                                                 <!-- Options will be dynamically added using JavaScript -->
                                             </select>
-                                            <label for="candidate_c_vessel" class="form-label">Vessel</label>
+                                            <label for="candidate_c_vessel" class="form-label">Select Vessel Type</label>
                                         </div>
                                     </div>
                                 </div>
