--- a/views/public/html/edit-c-contract.html
+++ b/views/public/html/edit-c-contract.html
@@ -657,7 +657,7 @@
                                           <select id="editcontract_vsl" class="form-select" required>
                                               <!-- Options will be dynamically added using JavaScript -->
                                           </select>
-                                          <label for="editcontract_vsl" class="form-label">Select Vessel Type</label>
+                                          <label for="editcontract_vsl" class="form-label">Select Vessel</label>
                                       </div>
                                   </div>
                                   <div class="col-md-6">
@@ -665,7 +665,7 @@
                                           <select id="editcontract_vesseltype" class="form-select" required>
                                               <!-- Options will be dynamically added using JavaScript -->
                                           </select>
-                                          <label for="editcontract_vesseltype" class="form-label">Vessel</label>
+                                          <label for="editcontract_vesseltype" class="form-label">Select Vessel Type</label>
                                       </div>
                                   </div>
                               </div>
