--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -951,6 +951,7 @@
                                                           <th scope="col" style="font-size: 8px;">Document</th>
                                                           <th scope="col"style="font-size: 8px;">AOA</th>
                                                           <th scope="col"style="font-size: 8px;">AOA</th>
+                                                          <th scope="col"style="font-size: 8px;">Duration of Contract</th>
                                                           <th scope="col" style="font-size: 8px;">Actions</th>
                                                       </tr>
                                                   </thead>
@@ -983,6 +984,10 @@
                                           <h4 class="text-center  mb-0 rounded-0 shadow-none border border-dark  card p-3">Document table</h4>
                                 
                                             <div class="table-responsive text-center">
+                                              <div id="searchContainer" class="mt-3">
+                                                <input type="text" id="documentSearchInput" class="form-control" placeholder="Search documents...">
+                                            </div>
+                                            
                                                 <table id="documentTable" class="table table table-striped table-bordered " style="font-size: 12px;">
                                                     <thead>
                                                         <tr>
