--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -624,7 +624,7 @@
                         <div class="card">
                             <h5 class="card-header text-center">View Candidate</h5>
                             <div class="card-body">
-                            <div class="btn btn-primary mb-3"> <span class="fw-bolder">Candidate Id : </span> <span  id="memId" value=""></span> </div>
+                              <div class="btn btn-primary mb-3"> <span class="fw-bolder">Candidate Id : </span> <span  id="memId" value=""></span> </div>
 
                                 <!-- Add your candidate information display here -->
                                 <div id="contentContainer" class="btn-group d-flex flex-wrap justify-content-center">
@@ -763,8 +763,8 @@
                                                     <input type="text" class="form-control small-font" id="edit_candidate_group">
                                                 </div>
                                                 <div class="col-md-2 mb-1">
-                                                    <label for="edit_candidate_vendor">Vendor</label>
-                                                    <input type="text" class="form-control small-font" id="edit_candidate_vendor"  aria-describedby="fieldX_2_Help"  />
+                                                    <label for="edit_candidate_nemo_source">Nemo Source</label>
+                                                    <input type="text" class="form-control small-font" id="edit_candidate_nemo_source"  aria-describedby="fieldX_2_Help"  />
                                                 </div>
                                                 <div class="col-md-2 mb-1">
                                                   <label for="edit_candidate_active_details">Active Details</label>
