--- a/views/public/html/add-c-contract.html
+++ b/views/public/html/add-c-contract.html
@@ -593,6 +593,9 @@
                 </div>
             </div>
                 <div class="w-100 mt-1">
+                  <div class="d-flex justify-content-end">
+                    <a class="btn btn-primary text-white m-3" id="goback">Go Back to View Candidate Page</a>
+                      </div>
                     <div class="   ms-0 me-0">
                       <h4 class="text-center mt-3 mb-0 rounded-0 shadow-none border border-dark  card p-3">Contract table</h4>
             
