--- a/views/public/html/add-c-medicals.html
+++ b/views/public/html/add-c-medicals.html
@@ -592,6 +592,9 @@
           </div>
             <div class="content-wrapper  rounded-3">
                 <div class="w-100 ">
+                  <div class="d-flex justify-content-end">
+                    <a class="btn btn-primary text-white m-3" id="goback">Go Back to View Candidate Page</a>
+                      </div>
                     <div class="">
                       <h4 class="text-center mt-3 mb-0 rounded-0 shadow-none border border-dark  card p-3">Medical table</h4>
                         <div id="pagination-controls"></div>
@@ -639,6 +642,7 @@
                     <div id="documentCollapse" class="accordion-collapse collapse" aria-labelledby="documentHeading" data-bs-parent="#documentAccordion">
                         <div class="accordion-body">
                       <div class="w-100   ">
+
                           <form  id="medicalForm" class="">
                               <div class=" col mb-3">
                                   <label for="hospital_name" class="form-label">Hospital Name</label>
