--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -910,10 +910,13 @@
                     
                                 <!-- Discussion Content -->
                                 <div id="discussionContent" style="display: none;">
-                                 
+                                  <div class="d-flex justify-content-end">
+                                  <a id="addDisc" class="btn btn-danger text-white  mt-3 me-3" href="#" onclick="addDiscussion()">Add new Discussion</a>
+                                  </div>
                                 <div class="border border-secondary rounded-3 p-3 mt-3">  <h4>Discussions :</h4>
                                   <div id="comments-section"></div>
                                   <div id="fetchedcomments"></div>
+
                               </div>
                               </div>
                             
@@ -924,6 +927,9 @@
                                   <div class="content-wrapper p-3 mb-5 rounded-3">
                                     <div class="w-100 ">
                                         <div class="">
+                                          <div class="d-flex justify-content-end">
+                                            <a id="addCont" class="btn btn-danger text-white  m-3 mt-0" href="#" onclick="addContract()">Add new Contract</a>
+                                            </div>
                                           <h4 class="text-center  mb-0 rounded-0 shadow-none border border-dark  card p-3">Contract table</h4>
                                 
                                             <div class="table-responsive text-center">
@@ -963,6 +969,7 @@
                     
                                           </div>
                                         </div>
+
                                     </div>
                                 </div>
                                 
@@ -981,6 +988,9 @@
                                   <div class="content-wrapper p-3 mb-5 rounded-3">
                                     <div class="w-100 ">
                                         <div class="">
+                                          <div class="d-flex justify-content-end">
+                                            <a id="addDoc" class="btn btn-danger text-white  m-3 mt-0" href="#" onclick="addDocument()">Add new Document</a>
+                                            </div>
                                           <h4 class="text-center  mb-0 rounded-0 shadow-none border border-dark  card p-3">Document table</h4>
                                 
                                             <div class="table-responsive text-center">
@@ -1025,6 +1035,9 @@
                                   <div class="content-wrapper p-3 mb-5 rounded-3">
                                     <div class="w-100 ">
                                         <div class="">
+                                          <div class="d-flex justify-content-end">
+                                            <a id="addBank" class="btn btn-danger text-white  m-3 mt-0" href="#" onclick="addBank()">Add new Bank</a>
+                                            </div>
                                           <h4 class="text-center  mb-0 rounded-0 shadow-none border border-dark  card p-3">Bank table</h4>
                                             <div id="pagination-controls"></div>
                                 
@@ -1065,6 +1078,9 @@
                                   <div class="content-wrapper p-3 mb-5 rounded-3">
                                     <div class="w-100 ">
                                         <div class="">
+                                          <div class="d-flex justify-content-end">
+                                            <a id="addTravel" class="btn btn-danger text-white  m-3 mt-0" href="#" onclick="addTravel()">Add new Travel</a>
+                                            </div>
                                           <h4 class="text-center  mb-0 rounded-0 shadow-none border border-dark  card p-3">Travel table</h4>
                                 
                                             <div class="table-responsive">
@@ -1101,6 +1117,9 @@
                                   <div class="content-wrapper  p-3 mb-5 rounded-3">
                                     <div class="w-100 ">
                                         <div class="">
+                                          <div class="d-flex justify-content-end">
+                                            <a id="addMed" class="btn btn-danger text-white  m-3 mt-0" href="#" onclick="addMedical()">Add new Medical</a>
+                                            </div>
                                           <h4 class="text-center mb-0 rounded-0 shadow-none border border-dark  card p-3">Medical table</h4>
                                             <div id="pagination-controls"></div>
                                 
@@ -1137,6 +1156,9 @@
                                   <div class="content-wrapper p-3 mb-5 rounded-3">
                                     <div class="w-100  ">
                                         <div class="">
+                                          <div class="d-flex justify-content-end">
+                                            <a id="addNkd" class="btn btn-danger text-white  m-3 mt-0" href="#" onclick="addNkd()">Add new Next Kin Dependant</a>
+                                            </div>
                                           <h4 class="text-center  mb-0 rounded-0 shadow-none border border-dark  card p-3">NKD table</h4>
                                             <div id="pagination-controls"></div>
                                 
@@ -1168,6 +1190,10 @@
                                   <div class="content-wrapper p-3 mb-5 rounded-3">
                                       <div class="w-100 ">
                                           <div class="">
+                                            
+                                            <div class="d-flex justify-content-end">
+                                              <a id="addSeaservice" class="btn btn-danger text-white  m-3 mt-0" href="#" onclick="addSeaservice()">Add new Sea service</a>
+                                              </div>
                                               <h4 class="text-center mb-0 rounded-0 shadow-none border border-dark card p-3">Sea Service Records</h4>
                               
                                               <div class="table-responsive text-center">
@@ -1198,7 +1224,10 @@
                                   </div>
                               </div>
                               <div id="evaluationContent" style="display: none;">
-                                <div class="container mt-5 mb-3">
+                                <div class="container mb-3">
+                                  <div class="d-flex justify-content-end">
+                                    <a id="addEval" class="btn btn-danger text-white  m-3 mt-0" href="#" onclick="addEval()">Add new Evaluation</a>
+                                    </div>
                                   <h4 class="text-center mb-0 rounded-0 shadow-none border border-dark card p-3">Evaluation Data</h4>
                                   <div class="table-responsive">
                                       <table class="table table-bordered table table-striped">
