--- a/views/public/html/edit-discussion.html
+++ b/views/public/html/edit-discussion.html
@@ -608,8 +608,13 @@
               </div>
           </div>
                 <!-- Content -->
+                
                 <div class="mt-3">
+                  <div class="d-flex justify-content-end">
+                  <a class="btn btn-primary text-white m-3" id="goback">Go Back to View Candidate Page</a>
+                    </div>
                   <div class="row">
+                    
                       <div class="col-md-6">
                           <div class="card ">
                               <h5 class="card-header">Last Call</h5>
