--- a/views/public/html/add-c-evaluation.html
+++ b/views/public/html/add-c-evaluation.html
@@ -594,7 +594,7 @@
                 <div class="content-wrapper p-3 mb-5 rounded-3">
                     <div class="w-100">
                       <div class="d-flex justify-content-end">
-                        <a class="btn btn-primary text-white m-3" id="goback">Go Back to View Candidate Page</a>
+                        <a class="btn btn-danger text-white m-3" id="goback">Go Back to View Candidate Page</a>
                           </div>
                         <div class="">
                             <h4 class="text-center mb-0 rounded-0 shadow-none border border-dark card p-3">Evaluation Form</h4>
