--- a/views/public/html/add-c-travel.html
+++ b/views/public/html/add-c-travel.html
@@ -593,7 +593,7 @@
             </div>
                 <div class="w-100 ">
                   <div class="d-flex justify-content-end">
-                    <a class="btn btn-primary text-white m-3" id="goback">Go Back to View Candidate Page</a>
+                    <a class="btn btn-danger text-white m-3" id="goback">Go Back to View Candidate Page</a>
                       </div>
                     <div class="">
                       <h4 class="text-center mt-3 mb-0 rounded-0 shadow-none border border-dark  card p-3">Travel table</h4>
