--- a/views/public/html/edit-discussion.html
+++ b/views/public/html/edit-discussion.html
@@ -611,7 +611,7 @@
                 
                 <div class="mt-3">
                   <div class="d-flex justify-content-end">
-                  <a class="btn btn-primary text-white m-3" id="goback">Go Back to View Candidate Page</a>
+                  <a class="btn btn-danger text-white m-3" id="goback">Go Back to View Candidate Page</a>
                     </div>
                   <div class="row">
                     
