--- a/views/public/html/availableCandidates.html
+++ b/views/public/html/availableCandidates.html
@@ -734,7 +734,7 @@
 async function populateCandidatesTable() {
     try {
         const token = localStorage.getItem('token');
-        const response = await axios.get('http://localhost:4000/candidate/avbreport');
+        const response = await axios.get('https://nemo.ivistaz.co/candidate/avbreport');
         const responseData = response.data;
         const candidates = responseData.candidates;
 
@@ -887,7 +887,7 @@ document.getElementById("logout").addEventListener("click", function() {
     // Send request to update logged status to false
     const userId = localStorage.getItem('userId');
     if (userId) {
-      axios.put(`http://localhost:4000/user/${userId}/logout`)
+      axios.put(`https://nemo.ivistaz.co/user/${userId}/logout`)
         .then(response => {
           console.log('Logged out successfully');
         })
