--- a/views/public/html/report.html
+++ b/views/public/html/report.html
@@ -734,6 +734,7 @@
             <li><a class="dropdown-item" href="#" onclick="showReport('reliefPlan')">Relief Plan</a></li>
             <li><a class="dropdown-item" href="#" onclick="showReport('dueForRenewal')">Due for Renewal</a></li>
             <li><a class="dropdown-item" href="#" onclick="showReport('dueForWorkedWith')">Worked With us</a></li>
+            <li><a class="dropdown-item" href="#" onclick="showReport('resumeDiscussion')">Candidate with Discussions</a></li>
           </ul>
         </div>
         
@@ -1865,6 +1866,11 @@
               </div>
           </div>
       </div>
+      
+      <div id="resumeDiscussionContent" class="report-content">
+        <!-- Content for Due for Renewal Report -->
+        <h1>Hello</h1>
+    </div>
       </div>
 
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
