search and edit fixed

--- a/views/public/html/add-c-bank.html
+++ b/views/public/html/add-c-bank.html
@@ -611,7 +611,7 @@
             </div>
                 <div class="w-100 ">
                   <div class="d-flex justify-content-end">
-                    <a class="btn btn-danger text-white m-3" id="goback">Go Back to View Candidate Page</a>
+                    <a class="btn btn-danger text-white m-3" id="goback" onclick="goBack()">Go Back to View Candidate Page</a>
                       </div>
                     <div class="">
                       <h4 class="text-center mt-3 mb-0 rounded-0 shadow-none border border-dark  card p-3">Bank table</h4>
