--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -858,6 +858,11 @@
                                                   <label for="edit_candidate_c_mobi2">Mobile</label>
                                                   <input type="text" class="form-control small-font" id="edit_candidate_c_mobi2"  aria-describedby="fieldX_2_Help"  />
                                               </div>
+                                              
+                                              <div class="col-md-2 mb-0">
+                                                <label for="edit_candidate_p_mobi1">Other Mobile</label>
+                                                <input type="text" class="form-control small-font" id="edit_candidate_p_mobi1"  aria-describedby="fieldX_2_Help"  />
+                                            </div>
                                           </div>
                                           <button class="btn btn-danger float-end mt-3" type="submit">Edit Candidate</button>
                                       </div>
@@ -891,7 +896,6 @@
                         <input type="hidden" placeholder="Enter candidate p ad2" id="edit_candidate_p_ad2" >
                         <input type="hidden" placeholder="Enter candidate p country" id="edit_candidate_p_country" >
                 
-                        <input type="hidden" placeholder="Enter candidate p mobi1" id="edit_candidate_p_mobi1" >    
                         <input type="hidden" placeholder="Enter candidate p mobi2" id="edit_candidate_p_mobi2" >    
                         <input type="hidden" placeholder="Enter candidate p rank" id="edit_candidate_p_rank" >    
                         <input type="hidden" placeholder="Enter candidate p tel1" id="edit_candidate_p_tel1" >    
